# ScriptCheck

./: .gitignore  Dockerfile  README.md  flake.nix  pyproject.toml  shell.nix  treefmt.nix
.devcontainer/: devcontainer.json
src/: __init__.py  main.py  questions.py  solutions.py
src/feedback/: script1.txt  script2.txt  script3.txt
src/submissions/: script1.py
src/utils/: functions.py  modules.py
tests/: script2.py
