[tool.poetry]
name = "scriptcheck"
version = "0.1.0"
description = "Application for automated checking of student scripts."
license = "MIT"
authors = ["ElliottSullingeFarrall <elliott.chalford@gmail.com>"]
readme = "README.md"
repository = "https://github.com/ElliottSullingeFarrall/ScriptCheck"
packages = [{ include = "src", to = "scriptcheck" }]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.1.1"
tqdm = "^4.66.5"
tqdm-stubs = "^0.2.1"

[tool.poetry.scripts]
scriptcheck = "src:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
